[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10.1"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"
pymongo = {extras = ["srv"], version = "^4.0.1"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

# [tool.poetry.scripts]
# dev = "uvicorn api.main:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
